deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiber-template
  labels:
    app.kubernetes.io/part-of: fiber-template
